test/fail/generic-type-too-many.grace
let Name<T> = T

Name<type {}, type {}>
